# shaha

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  justfile
.github/workflows/: aur.yml
src/: config.rs  lib.rs  main.rs  output.rs
src/cli/: build.rs  info.rs  mod.rs  query.rs  source.rs
src/hasher/: mod.rs
src/source/: aspell.rs  file.rs  mod.rs  seclists.rs  stdin.rs  url.rs
src/storage/: mod.rs  parquet.rs  r2.rs
tests/: integration.rs
