[package]
name = "shaha"
version = "0.1.0"
edition = "2021"
description = "Hash database builder and reverse lookup tool"
license = "MIT"
repository = "https://github.com/oritwoen/shaha"
keywords = ["hash", "crypto", "security", "parquet"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Hashing
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
sha3 = "0.10"
blake3 = "1.8"
ripemd = "0.1"

# Data format
parquet = "54"
arrow = { version = "54", features = ["prettyprint"] }

# Parallel processing
rayon = "1.10"
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "2"

# Output formatting
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
hex = "0.4"

# Bloom filter
bloomfilter = "1"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# System directories
dirs = "6"

# Config file
toml = "0.8"

# DuckDB (R2/S3 storage)
duckdb = { version = "1.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
